2006-03-23  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: New option "set style increment {user|default}"

	By default, successive plots within the same graph will use successive
	linetypes from the default set for the current terminal type.
	However, choosing the "user" option allows you to step through 
	user-defined linestyles rather than through the default line types.

	* src/gadgets.c src/gadgets.h: Global flag TBOOLEAN prefer_line_styles.

	* src/save.c src/set.c src/show.c src/tables.c src/tables.h:
	Save/set/show preference for line styles rather than linetypes.

	* src/plot2d.c (eval_plots) src/plot3d.c (eval_3dplots):
	If (prefer_lines_styles) then autoincrement successive plots by line
	style rather than linetype.

	* src/misc.c: Missing line style is non-fatal error.

2006-03-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (lp_parse): Allow "bgnd" as shorthand for "lt -3".

2006-03-23  Daniel Sebald  <daniel.sebald@ieee.org>

	* demo/pm3dcolors.dem: Make one example more happy.

2006-03-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/unset.c (unset_axislabel): Fix memory leak from failure to
	free axis labels.

2006-03-22  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/gplt_x11.c (handle_selection_event): Fix typo in debug code.

2006-03-19  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graphics.c (boundary): Avoid strchr() on NULL x axis label
	text.

2006-03-18  Ethan A Merritt  <merritt@u.washington.edu>

	Daniel Sebald has pointed out that when the same plot is being redrawn
	repeatedly, for instance during interactive rotation of 3D plots, the
	process is noticibly slowed by resending the color palette on each 
	refresh. The following set of changes insures that the palette is only
	sent if something has changed.

	* src/color.c (make_palette): Do not call term->make_palette() unless
	either (a) the palette has changes, (b) the terminal has changed, or